--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,7 @@
 body {
   margin: 0;
+  padding-left: 30px;
+  padding-right: 30px;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -10,4 +12,28 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.App {
+  text-align: center;
+  padding: 50px;
+}
+
+.detail-page {
+  text-align: center;
+  display: block;
+  padding: 90px;
+}
+
+.media-content {
+  text-align: left;
+}
+
+.card {
+  min-height: 100%;
+}
+
+.input {
+  width: 80%;
+  margin-top: 50px;
 }
